--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
 <body>
     <div id="wrapper">
-        <div id="centralBlock">
+        <!-- <div id="list">
             <div id="person"></div>
+            <div id="sumDoc"></div>
+            <div id="type"></div> -->
         </div>
     </div>
 
